# portable-scripts

./: .gitignore  .gitmodules  ABOUT.md  Makefile.arch  Makefile.defs  README  README.md  setup  setup.profile
.local/: ABOUT.md  README  README.md  REQUIRED.txt
.local/apps/cmake/: BuildTypes.cmake  SystemC.cmake  course.cmake  cpp-project_defaults.cmake  cpp17_defaults.cmake  doxygen.cmake  project_defaults.cmake  sc-project_defaults.cmake  set_target.cmake  show_vars.cmake  stackusage.cmake  strict.cmake
.local/apps/make/: Makefile.arch  Makefile.defs
.local/apps/sc-templates/cmake/: CMakeLists.txt
.local/apps/sc-templates/cpp-cmake/: .newrc  CMakeLists.txt
.local/apps/sc-templates/cpp-enum/: lxlcxxNAMExr_enum.cpp
.local/apps/sc-templates/cpp-main/: lxNAMExr.cpp
.local/apps/sc-templates/makefile/: .newrc  Makefile
.local/apps/sc-templates/sc-cmake/: .newrc  CMakeLists.txt
.local/apps/sc-templates/sc-main/: README.md
.local/apps/sc-templates/sc-module/: lxlcxxNAMExr.cpp  lxlcxxNAMExr.hpp
.local/apps/templates/: ABOUT.md
.local/apps/templates/apache2.0/: .newrc  LICENSE
.local/apps/templates/arch-sys-abi/: lxARCHxr-lxSYSxr-lxABIxr.cmake
.local/apps/templates/c-module/: .newrc  lxlcxxNAMExr_module.c  lxlcxxNAMExr_module.h
.local/apps/templates/cmake/: .newrc  CMakeLists.txt
.local/apps/templates/cmake-lib/: .newrc  CMakeLists.txt
.local/apps/templates/cpp-body/: .newrc  lxNAMExr.cpp
.local/apps/templates/cpp-class/: .newrc  lxNAMExr.cpp  lxNAMExr.hpp
.local/apps/templates/cpp-cmake/: CMakeLists.txt
.local/apps/templates/cpp-cmake/cmake/: env2.cmake  policy.cmake  project_defaults.cmake  set_target.cmake
.local/apps/templates/cpp-enum/: .newrc  lxlcxxNAMExr_enum.hpp
.local/apps/templates/cpp-example/lxNAMExr/: CMakeLists.txt  README.md  lxNAMExr.cpp  lxNAMExr.hpp  main.cpp
.local/apps/templates/cpp-header/: .newrc  lxNAMExr.hpp
.local/apps/templates/cpp-main/: .newrc
.local/apps/templates/cpp-project/: .newrc
.local/apps/templates/cpp-project/lxNAMExr/: CMakeLists.txt  gitignore
.local/apps/templates/cpp-quick/lxNAMExr/: lxNAMExr.cpp
.local/apps/templates/gitattrs/: .gitattributes  .newrc
.local/apps/templates/gitignore/: .gitignore  .newrc
.local/apps/templates/gmake/: .newrc  GNUmakefile
.local/apps/templates/pimpl/: .newrc  lxNAMExr.cpp  lxNAMExr.hpp
.local/apps/templates/project-cpp/: setup.profile
.local/apps/templates/project-cpp/lxNAMExr/: ABOUT.md  setup.profile
.local/apps/templates/project-cpp/lxNAMExr/cmake/: ABOUT.md  project_defaults.cmake
.local/apps/templates/project-cpp/lxNAMExr/externs/: ABOUT.md
.local/apps/templates/project-cpp/lxNAMExr/externs/lib/: ABOUT.md
.local/apps/templates/rust-project/: .newrc
.local/apps/templates/rust-project/lxNAMExr/: .gitattributes  .gitignore  README.md  setup.profile
.local/apps/templates/rust-project/lxNAMExr/dev-tools/: README.md  make-help.py
.local/apps/templates/sc-cmake/: CMakeLists.txt
.local/apps/templates/sc-example/: .newrc
.local/apps/templates/sc-example/lxNAMExr/: ABOUT.md  CMakeLists.txt  lxNAMExr.cpp  lxNAMExr.hpp
.local/apps/templates/sc-main/: .newrc  lxlcxxNAMExr.cpp
.local/apps/templates/sc-module/: .newrc
.local/apps/templates/sc-project/: .newrc
.local/apps/templates/sc-project/lxNAMExr/: CMakeLists.txt  lxNAMExr.cpp  lxNAMExr.hpp  main.cpp  setup.profile  top.hpp
.local/apps/templates/sc-project/lxNAMExr/cmake/: systemc.cmake
.local/apps/templates/setup/: .newrc  setup.profile
.local/apps/templates/toolchain/: .newrc  toolchain-lxNAMExr.cmake
.local/apps/templates/vscode/: .newrc
.local/dotfiles/: aliases  astylerc  bash_aliases  bash_debug  bash_env  bash_functions  bash_paths  bash_profile  bash_setup  bashrc  env  functions  gdbinit  lessfilter  synopsys.setup  vimrc  zsh_aliases
.local/dotfiles/ssh/: authorized_keys
.local/dotfiles/vim/: .netrwhist  filetype.vim
.local/dotfiles/vim/scripts/: lint.vim
.local/dotfiles/vim/syntax/: cpp.vim  sh.vim
.local/examples/: bad.bash  good.bash
.local/git/: ABOUT.md
.local/lib/: Envv.pm  pscr.pm
.local/man/man1/: FindExe.1
.local/patches/: systemc.patches
.local/scratch/: history.sh
.local/scripts/: ABOUT.md  Add_prefix  Add_suffix  Append_path  Beta  Car  Cdr  Columns  Confirm  Essential-IO  Essential-manip  Expand_path  Find  FindExe  FindScript  Firstreal  Firstword  Has_path  Instructor  Load  Mk  Nargs  Path_elt  Path_index  Prepend_path  Read  Realpath  Remove_missing  Remove_path  Rows  Shell_is  Tcpip  Unique_list  Unique_path  Version  args  avstack.pl  dotfile  findkey  gpg-sign  (+8 more)
.local/share/: ABOUT.md
.local/src/: README.md
.local/tests/: ABOUT.md  GNUmakefile  test-reporting  test-require
